--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -1,8 +1,7 @@
-
-tasks.withType(Compile).allObjects { task ->
+tasks.withType(Compile).all { task ->
     task.options.encoding = 'utf-8'
 }
-tasks.withType(GroovyCompile).allObjects { task ->
+tasks.withType(GroovyCompile).all { task ->
     task.options.encoding = 'utf-8'
     task.groovyOptions.encoding = 'utf-8'
 }
