--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -59,20 +59,20 @@ docbookSrc = new File(project.buildDir, 'src')
 samplesSrcDir = file('src/samples')
 websiteDocs = new File(buildDir, 'websiteDocs')
 
-tasks.withType(Docbook2Xhtml).all { task->
-    task.dependsOn userguideStyleSheets
-    task.classpath = configurations.userGuideTask
-    task.stylesheetsDir = userguideStyleSheets.destinationDir
+tasks.withType(Docbook2Xhtml) {
+    dependsOn userguideStyleSheets
+    classpath = configurations.userGuideTask
+    stylesheetsDir = userguideStyleSheets.destinationDir
 }
-tasks.withType(UserGuideTransformTask).all { task->
-    task.classpath = configurations.userGuideTask
-    task.dependsOn samples, dslDocbook
-    task.snippetsDir = samples.snippetsDir
-    task.linksFile = dslDocbook.linksFile
+tasks.withType(UserGuideTransformTask) {
+    classpath = configurations.userGuideTask
+    dependsOn samples, dslDocbook
+    snippetsDir = samples.snippetsDir
+    linksFile = dslDocbook.linksFile
 }
-tasks.withType(AssembleDslDocTask).all { task ->
-    task.classpath = configurations.userGuideTask
-    task.classDocbookDir = dslSrcDir
+tasks.withType(AssembleDslDocTask) {
+    classpath = configurations.userGuideTask
+    classDocbookDir = dslSrcDir
 }
 
 task samples(type: ExtractSnippetsTask) {
