fixed GRADLE-1366: Redundancy in class header declaration fixed typo

--- a/subprojects/docs/src/samples/userguide/initScripts/customLogger/init.gradle
+++ b/subprojects/docs/src/samples/userguide/initScripts/customLogger/init.gradle
@@ -1,6 +1,6 @@
 useLogger(new CustomEventLogger())
 
-class CustomEventLogger extends BuildAdapter implements BuildListener, TaskExecutionListener {
+class CustomEventLogger extends BuildAdapter implements TaskExecutionListener {
 
     public void beforeExecute(Task task) {
         println "[$task.name]"
