--- a/subprojects/ui/ui.gradle
+++ b/subprojects/ui/ui.gradle
@@ -34,13 +34,12 @@ dependencies {
     integTestRuntime project(path: ':core', configuration: 'integTestFixturesRuntime')
 }
 
-task integTest(type: Test, dependsOn: [ rootProject.intTestImage ]) {
-    systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath
-    systemProperties['integTest.gradleUserHomeDir'] = rootProject.integTestUserDir.absolutePath
-    testClassesDir = sourceSets.integTest.classesDir
-    classpath = sourceSets.integTest.runtimeClasspath
-
-    doFirst { task -> systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath }
+task integTest(type: Test) {
+    doFirst {
+        systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath
+        systemProperties['integTest.gradleUserHomeDir'] = rootProject.integTestUserDir.absolutePath
+        systemProperties['integTest.gradleHomeDir'] = rootProject.intTestImage.integTestGradleHome.absolutePath
+    }
 }
 
 test {
