--- a/subprojects/docs/src/samples/toolingApi/build.gradle
+++ b/subprojects/docs/src/samples/toolingApi/build.gradle
@@ -15,6 +15,8 @@ repositories {
 
 dependencies {
     compile "org.gradle:gradle-tooling-api:${toolingApiVersion}"
+    // Need an SLF4J implementation at runtime
+    runtime 'org.slf4j:slf4j-simple:1.6.1'
 }
 
 mainClassName = 'org.gradle.sample.Main'
