--- a/performanceTest/src/templates/build.gradle
+++ b/performanceTest/src/templates/build.gradle
@@ -14,13 +14,15 @@
  * limitations under the License.
  */
 <% if (subprojects.empty ) { %>
-usePlugin('java')
+apply plugin: 'java'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compile 'org.slf4j:slf4j-api:1.6.1'
+    runtime 'org.slf4j:slf4j-simple:1.6.1'
     testCompile 'junit:junit:4.8.1'
 }
 test.testReport = false
@@ -28,7 +30,7 @@ test.testReport = false
 <% if (groovyProject) { %>
 apply plugin: 'groovy'
 dependencies {
-    groovy 'org.codehaus.groovy:groovy-all:1.7.6'
+    groovy 'org.codehaus.groovy:groovy:1.7.6'
 }
 <% } %>
 
