--- a/subprojects/launcher/launcher.gradle
+++ b/subprojects/launcher/launcher.gradle
@@ -5,6 +5,9 @@ dependencies {
 
     compile project(':core')
     compile project(':ui')
+    
+    runtime project(':plugins')
+    runtime project(':codeQuality')
 
     compile libraries.slf4j_api
 
