- Generate an application configuration to run Gradle from the IDE - Some build script cleanups

--- a/gradle/integTest.gradle
+++ b/gradle/integTest.gradle
@@ -28,6 +28,8 @@ eclipseClasspath {
     plusConfigurations.add(configurations.integTestRuntime)
 }
 
+integTestUserDir = rootProject.file('intTestHomeDir')
+
 integTestTasks = tasks.withType(Test).matching { it.name.toLowerCase().endsWith('integtest') }
 
 integTestTasks.all {
