--- a/build.gradle
+++ b/build.gradle
@@ -283,10 +283,42 @@ ideaWorkspace {
     withXml { provider ->
         Node node = provider.asNode()
 
-        Node runConfig = node.component.find { it.'@name' == 'RunManager' }.configuration.find { it.'@type' == 'JUnit'}
+        Node runManagerConfig = node.component.find { it.'@name' == 'RunManager' }
+
+        // Add int test configuration to JUnit defaults
+        Node runConfig = runManagerConfig.configuration.find { it.'@type' == 'JUnit'}
 
         Node vmParameters = runConfig.option.find { it.'@name' == 'VM_PARAMETERS' }
         vmParameters.'@value' = "\"-DintegTest.gradleHomeDir=${intTestImage.destinationDir}\" -ea -Dorg.gradle.integtest.executer=embedded"
+
+        // Add an application configuration
+        runManagerConfig.'@selected' = 'Application.Gradle'
+        def appConfig = new XmlParser().parseText('''
+    <configuration default="false" name="Gradle" type="Application" factoryName="Application">
+      <extension name="coverage" enabled="false" merge="false" />
+      <option name="MAIN_CLASS_NAME" value="org.gradle.launcher.Main" />
+      <option name="VM_PARAMETERS" value="" />
+      <option name="PROGRAM_PARAMETERS" value="" />
+      <option name="WORKING_DIRECTORY" value="file://$PROJECT_DIR$" />
+      <option name="ALTERNATIVE_JRE_PATH_ENABLED" value="false" />
+      <option name="ALTERNATIVE_JRE_PATH" value="" />
+      <option name="ENABLE_SWING_INSPECTOR" value="false" />
+      <option name="ENV_VARIABLES" />
+      <option name="PASS_PARENT_ENVS" value="true" />
+      <module name="launcher" />
+      <envs />
+      <RunnerSettings RunnerId="Debug">
+        <option name="DEBUG_PORT" value="63810" />
+        <option name="TRANSPORT" value="0" />
+        <option name="LOCAL" value="true" />
+      </RunnerSettings>
+      <RunnerSettings RunnerId="Run" />
+      <ConfigurationWrapper RunnerId="Debug" />
+      <ConfigurationWrapper RunnerId="Run" />
+      <method />
+    </configuration>
+''')
+        runManagerConfig.append(appConfig)
     }
 }
 
@@ -421,8 +453,6 @@ artifacts {
     }
 }
 
-integTestUserDir = file('intTestHomeDir')
-
 task intTestImage(type: Sync) {
     dependsOn allZip.taskDependencies
     with allDistImage
@@ -538,7 +568,7 @@ task release {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '0.9.1'
+    gradleVersion = '0.9.2'
 }
 
 def groovyProjects() {
