--- a/subprojects/eclipse/eclipse.gradle
+++ b/subprojects/eclipse/eclipse.gradle
@@ -23,8 +23,8 @@ dependencies {
     compile libraries.slf4j_api, libraries.jaxen
     compile 'dom4j:dom4j:1.6.1@jar'
 
-
     testCompile project(path: ':core', configuration: 'testFixtures')
+    testCompile libraries.xmlunit
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
 }
 
