--- a/subprojects/wrapper/wrapper.gradle
+++ b/subprojects/wrapper/wrapper.gradle
@@ -19,7 +19,7 @@ dependencies {
     groovy libraries.groovy_depends
     compile project(':core')
 
-    compile libraries.commons_io, libraries.ant, libraries.ant_nodeps
+    compile libraries.commons_io, libraries.ant
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
