--- a/website/build.gradle
+++ b/website/build.gradle
@@ -74,9 +74,9 @@ task configureReleases << {
 
     version = gradleCoreProperties.version
     releases << new Release(version: version, status: 'Current Release')
+    releases << new Release(version: '0.9.2')
     releases << new Release(version: '0.9.1')
     releases << new Release(version: '0.9')
-    releases << new Release(version: '0.8')
 }
 
 task html(dependsOn: configureReleases) << {
@@ -299,9 +299,7 @@ class Release {
     }
 
     def String getReleaseNoteVersion() {
-        Matcher matcher = version =~ /(\d+(\.\d+)+).*/
-        matcher.matches()
-        return matcher.group(1)
+        return version
     }
 
     def String getDisplayName() {
