--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -260,6 +260,7 @@ task groovydoc(type: Groovydoc) {
     group = 'documentation'
     source groovyProjects().collect {project -> project.sourceSets.main.groovy + project.sourceSets.main.java }
     destinationDir = new File(docsDir, 'groovydoc')
+    classpath = javadoc.classpath
     includes = javadoc.includes
     excludes = javadoc.excludes
     doFirst {
