--- a/subprojects/core/core.gradle
+++ b/subprojects/core/core.gradle
@@ -48,7 +48,7 @@ dependencies {
             libraries.commons_io,
             libraries.commons_lang,
             "commons-codec:commons-codec:1.2@jar",
-            libraries.google_collections,
+            libraries.guava,
             "commons-collections:commons-collections:3.2.1@jar",
             "slide:webdavlib:2.0@jar",
             "org.apache.maven:maven-ant-tasks:2.1.1@jar",
