--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include 'openApi'
 include 'toolingApi'
 include 'docs'
 include 'integTest'
+include 'sonar'
 
 rootProject.name = 'gradle'
 rootProject.children.each {project ->
