fixed build problem that caused all tests exercising the test report (intentionally or not) to fail

--- a/subprojects/plugins/plugins.gradle
+++ b/subprojects/plugins/plugins.gradle
@@ -41,9 +41,11 @@ dependencies {
     testFixtures sourceSets.test.classes
 }
 
-task reportResources(type: Copy) {
-    from(configurations.reports)
-    into "${sourceSets.main.classesDir}/org/gradle/api/internal/tasks/testing/junit/report"
+task reportResources << {
+    copy {
+        from(configurations.reports)
+        into "${sourceSets.main.classesDir}/org/gradle/api/internal/tasks/testing/junit/report"
+    }
 }
 
 classes.dependsOn reportResources
