further documentation for the Sonar plugin

--- a/subprojects/docs/src/samples/sonar/build.gradle
+++ b/subprojects/docs/src/samples/sonar/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: "java"
 
 // START SNIPPET use-plugin
-apply plugin: 'sonar'
+apply plugin: "sonar"
 // END SNIPPET use-plugin
 
 // START SNIPPET connection-settings
