GRADLE-1432 - Use junit's Runner API to execute tests, rather than old Test API, to remove heap leak - Changed junit test report to show ignored tests, now that we have this information.

--- a/subprojects/plugins/plugins.gradle
+++ b/subprojects/plugins/plugins.gradle
@@ -69,5 +69,6 @@ eclipseClasspath {
 
 test {
     exclude 'org/gradle/api/internal/tasks/testing/junit/ATestClass*.*'
+    exclude 'org/gradle/api/internal/tasks/testing/junit/ABroken*TestClass*.*'
     jvmArgs '-Xms128m', '-Xmx256m', '-XX:+HeapDumpOnOutOfMemoryError'
 }
