Updated performance test templates

--- a/performanceTest/src/templates/build.gradle
+++ b/performanceTest/src/templates/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 }
 test {
     jvmArgs '-XX:MaxPermSize=512m', '-XX:+HeapDumpOnOutOfMemoryError'
+//    testReport = false
 }
 
 <% if (groovyProject) { %>
