--- a/subprojects/tooling-api/tooling-api.gradle
+++ b/subprojects/tooling-api/tooling-api.gradle
@@ -3,7 +3,8 @@ apply plugin: 'groovy'
 dependencies {
     groovy libraries.groovy_depends
 
-    compile project(':core'), project(':wrapper'), project(':eclipse')
+    publishCompile project(':core'), project(':wrapper')
+    compile project(':eclipse')
 
     testCompile project(path: ':core', configuration: 'testFixtures')
     testRuntime project(path: ':core', configuration: 'testFixturesRuntime')
